<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">内涵</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="main_tab_item_text_essay">段子</string>
    <string name="main_tab_item_text_image">图片</string>
    <string name="main_tab_item_text_review">审核</string>
    <string name="main_tab_item_text_huodong">活动</string>
    <string name="main_tab_item_text_my">我的</string>
    <string name="publish_essay">我要投稿</string>
    <string name="vote_essay">我要审核</string>

</resources>
