<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.north.neihan.MainActivity" >

    <FrameLayout
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <RadioGroup
        android:id="@+id/main_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tabbar"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/main_tab_item_essay"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/ic_tab_essay"
            android:checked="true"
            android:text="@string/main_tab_item_text_essay" />

        <RadioButton
            android:id="@+id/main_tab_item_image"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/ic_tab_image"
            android:text="@string/main_tab_item_text_image" />

        <RadioButton
            android:id="@+id/main_tab_item_check"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/ic_tab_review"
            android:text="@string/main_tab_item_text_review" />

        <RadioButton
            android:id="@+id/main_tab_item_activity"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/ic_tab_activity"
            android:text="@string/main_tab_item_text_huodong" />

        <RadioButton
            android:id="@+id/main_tab_item_my"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/ic_tab_my"
            android:text="@string/main_tab_item_text_my" />
    </RadioGroup>

</LinearLayout>